[CHK-1393] Controller warmup annotation processor (#72)
* feat: annotation processor for Warmup annotation

* fix: service locator file path

* fix: annotation processor compilation

* fix: add log

* fix: read class annotations

* fix: test

* fix: add junit tests

* fix: add junit tests

* fix: add junit tests

* fix: add junit tests

* Update src/main/java/it/pagopa/ecommerce/commons/utils/warmup/annotationprocessor/WarmupAnnotationProcessor.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update src/main/java/it/pagopa/ecommerce/commons/utils/warmup/annotationprocessor/WarmupAnnotationProcessor.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update src/main/java/it/pagopa/ecommerce/commons/utils/warmup/annotationprocessor/WarmupAnnotationProcessor.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* fix: add pom executions comment

* Update pom.xml

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update pom.xml

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update pom.xml

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

---------

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>