@@ -185,6 +185,44 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <!--
+                There are two compilation executions:
+                the first one compiles the annotation processor alone excluding all annotations processors
+                from the compilation phase, the second one compiles all other classes.
+                This double compilation execution is needed because otherwise compilation will fail
+                during annotation processor scanning because of a missing WarmupAnnotationProcessor compiled
+                class.
+                The annotation processors are compiled in the execution with id `default-compile` so that
+                it's execute the first.
+                The other project classes are compiled in the execution with id `compile-project`
+                -->
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <configuration>
+                            <source>17</source>
+                            <target>17</target>
+                            <compilerArgs>-proc:none</compilerArgs>
+                            <includes>
+                                <include>
+                                    it/pagopa/ecommerce/commons/utils/warmup/annotationprocessor/WarmupAnnotationProcessor.java
+                                </include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>compile-project</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <source>17</source>
+                            <target>17</target>
+                            <compilerArgs>--enable-preview</compilerArgs>
+                        </configuration>
+                    </execution>
+                </executions>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
@@ -279,7 +317,8 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>https://api.uat.tokenizer.pdv.pagopa.it/docs/tokenizeruapis/openapi.json</inputSpec>
+                            <inputSpec>https://api.uat.tokenizer.pdv.pagopa.it/docs/tokenizeruapis/openapi.json
+                            </inputSpec>
                             <generatorName>java</generatorName>
                             <library>webclient</library>
                             <generateApiDocumentation>false</generateApiDocumentation>
